Fixed logo on mobile

--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -22,10 +22,9 @@ header {
 h2.title {
 
 	position:relative;
-	width:250px;
+	width:280px;
   height:70px;
 	margin:20px auto;
-  margin-left: 0;
   z-index:1;
 
   @include media-breakpoint-up(lg){
